[package]
name = "savont"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = {version = "0.6.3", features = ["bzip2", "flate2"], default-features = false}
flexi_logger = {version = "0.29", features = ["colors"] }
log = "0"
rayon = "1"
smallvec = { version = "1", features = ["union","serde","write"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
clap = { version = "4.4", features = ["derive"] }
spmc = "0.3"
fishers_exact = "1.0"
fxhash = "0"
bio-seq = { version = "0.14", features = ["serde"]}
memory-stats = "1.2.0"
fastbloom = "0.11.0"
crossbeam-channel = "0.5.13"
statrs = "0.16"
flate2 = { version = "*", features = ["rust_backend"] }
sysinfo = "0.34.2"
clap-num = "1.2.0"
clap-markdown = { git = "https://github.com/bluenote-1577/clap-markdown.git" }
minimap2 = "0.1.28"
spoa_rs = "0.1"
#triple_accel = "0.4"

[target.'cfg(target_arch = "aarch64")'.features]
default = ["neon"]

[build-dependencies]
built = { version = "0.7", features = ["chrono"] }


[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.8"
#predicates = "1"
#serial_test = "*"
#rand = "0.8"
approx = "0.4"


[profile.release]
#panic = "abort"
#lto = true

[profile.dev]
#opt-level = 1
opt-level = 3
